# clan-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  MANUAL_TESTING.md  Procfile  RAILWAY_DEPLOYMENT_CHECKLIST.md  README.md  alembic.ini  docker-compose.yml  main.py  mypy.ini  pyproject.toml  pytest.ini  railway.toml  requirements.txt  ruff.toml  run.sh  todo_next_steps.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 617d74853330_add_exclusion_fields_to_players_table.py  cff86a05b80a_initial_migration_create_players_and_.py
bot/handlers/: admin.py  common.py  decorators.py  registration.py
bot/keyboards/: admin.py
bot/middleware/: rate_limit.py
bot/states/: registration.py
config/: database.py  google.py  settings.py  storage.py
data/: captcha_questions.json
database/: database.py  models.py  repository.py
docs/: LOCAL_TESTING.md  RAILWAY_SETUP.md  SECURITY_RESEARCH.md
models/: player.py
tests/: conftest.py  test_captcha.py  test_database.py  test_handlers_admin.py  test_handlers_common.py  test_handlers_registration.py  test_rate_limit.py  test_repository.py  test_temp_storage.py  test_validators.py
tests/integration/: __init__.py  test_flow_registration.py
utils/: captcha.py  formatters.py  validators.py
