[project]
name = "clan-bot"
version = "0.1.0"
description = "Telegram bot for clan member registration and management"
requires-python = ">=3.10"
dependencies = [
    "aiogram==3.3.0",
    "aiohttp==3.9.1",
    "alembic==1.13.0",
    "asyncpg==0.29.0",
    "pydantic==2.5.3",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "sqlalchemy==2.0.23",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "mypy==1.7.1",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "ruff==0.1.8",
]
