[project]
name = "clan-bot"
version = "0.1.0"
description = "Telegram bot for clan member registration and management"
requires-python = ">=3.10"
dependencies = [
    "aiogram==3.24.0",
    "aiohttp==3.12.0",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "pydantic==2.10.5",
    "python-dateutil==2.9.0",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.36",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "mypy==1.14.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "ruff==0.9.2",
]
